# covenant-connect

./: .env.example  .gitignore  .replit  Pasted-I-want-to-setup-a-vite-app-with-this-TRD-Covenant-Connect-Technical-Requirement-Document--1729891282255.txt  README.md  app.py  babel.cfg  config.py  create_admin.py  docker-compose.yml  insert_test_data.py  main.py  messages.pot  models.py  package.json  pnpm-workspace.yaml  pyproject.toml  tasks.py  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml  wordpress-release.yml
apps/backend/: .eslintrc.cjs  Dockerfile  jest.config.ts  (+5 more)
docs/: admin_inventory.md  dependabot.md  deployment-runbook.md  donations-webhooks.md  js-architecture.md  migration-plan.md
integrations/: __init__.py  email.py  sso.py
migrations/: alembic.ini
routes/: admin.py  admin_reports.py  auth.py  donations.py  events.py  gallery.py  home.py  internal.py  notifications.py  prayers.py  sermons.py  solutions.py
scripts/: create_admin.py  fix_admin.py  init_db.py  manage.py  postinstall.js  reset_db.py  run-backend-script.js  worker.py
templates/: base.html  donations.html  event_detail.html  events.html  events_plan.html  gallery.html  home.html  prayers.html  saas.html  sermon_detail.html  sermons.html  wordpress_plugin.html
tests/: conftest.py  test_church_management.py  test_config_security.py  test_create_admin.py  test_csrf_tokens.py  test_donation.py  test_email_integrations.py  test_events.py  test_internal_dashboard.py  test_prayer_queue.py  test_sermon_media.py  test_sso.py
translations/: messages.pot
(+231 files in other folders)
