[project]
name = "repl-nix-vitecovenantconnect"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.0.6",
    "flask-sse>=1.0.0",
    "redis>=5.2.0",
    "flask-wtf>=1.2.1",
    "rq>=1.16.2",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["templates"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"routes/events.py" = ["F401", "F811", "F841"]
"routes/sermons.py" = ["F401", "F811", "F841"]
"routes/solutions.py" = ["F401", "F811", "F841"]
